--- a/ReponsiveWeb/style.css
+++ b/ReponsiveWeb/style.css
@@ -43,6 +43,8 @@ header {
 .row {  
   display: flex;
   flex-wrap: wrap;
+  max-width: 1280px;
+  margin-left: 0px;
 }
 
 /* Create two unequal columns that sits next to each other */
@@ -50,7 +52,6 @@ header {
 .side {
   flex: 30%;
   background-color: #f1f1f1;
-  padding: 20px;
 }
 .side .imgTop>a>img{
   max-width: 344px;
