--- a/ReponsiveWeb/style.css
+++ b/ReponsiveWeb/style.css
@@ -3,88 +3,22 @@
   margin: 0;
   padding: 0;
 }
-
-/* Style the body */
-body {
-  background-color: #dcdbdb;
-  font-family: Arial;
-  margin: auto;
-  max-width: 1280px;
+body{
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+  z-index: auto;
 }
 
-/* Header/logo Title */
-header {
-  text-align: center;
-  background: white;
-  color: white;
+.banner{
+  max-width: 100%;
 }
 
-/* Style the top navigation bar */
-/*nav{
-  display: flex;
-  background-color: #333;
-}*/
-
-/* Style the navigation bar links */
-/*nav a {
-  color: white;
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}*/
-
-/* Change color on hover */
-/*nav a:hover {
-  background-color: #ddd;
-  color: black;
-}*/
-
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1280px;
-  margin-left: 0px;
+.main{
+  margin-top: 30px;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-.side .imgTop>a>img{
-  max-width: 344px;
-  max-height: 344px;
-}
-
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-.main .name a{
-  text-decoration-line: none;
-  color: black;
-}
-.main .thumb>a>img{
- max-height: 200px;
- max-width: 800px;
-}
-
-/* Footer */
-footer {
-  padding: 20px;
-  text-align: center;
-  background: #757575;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media (max-width: 700px) {
-  .row, nav {   
-    flex-direction: column;
-  }
+.jumbotron>p{
+  font-size: 18px;
+  color: #b5aec4;
+  margin-bottom: 0;
 }
