--- a/Kiemtra/style.css
+++ b/Kiemtra/style.css
@@ -309,6 +309,9 @@ img{max-width: 100%;}
 	padding-left: 10rem;
 	padding-right: 10rem;
 }
+.upload_link label{
+	cursor: pointer;
+}
 .comment_form{
 	padding-left: 8.5rem;
 	padding-right: 8.5rem;
@@ -341,7 +344,6 @@ img{max-width: 100%;}
 .upload{
 	border: 1px solid #ced4da;
 	border-radius: 0.5rem;
-	cursor: pointer;
 	background-color: #FDFDFD;
 	text-align: center;
 	padding-left: 20%;
