--- a/Noel/main.css
+++ b/Noel/main.css
@@ -2,19 +2,24 @@
 	box-sizing:border-box;
 	margin:0;
 	padding:0;
-	-webkit-transition: all 100ms ease-in;
-	transition: all 100ms ease-in;
+	
 }
 html{
 	background-image: url("img/background.jpg"); 
 	height: 100%;
+	width: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	font-size: 62.5%;
+	
 }
 body {
 	overflow: hidden;
 }
+audio{
+		display: none;
+	}
 .santa{
 	max-width: 60%;
 	position: absolute;
@@ -25,6 +30,7 @@ body {
 	width: 100%;
 	animation: santa 10s linear infinite;
 	animation-direction: alternate;
+	padding-top: 0%;
 }
 .house{
 	min-width: 100%;
@@ -32,7 +38,7 @@ body {
 	bottom: 0%;
 }
 .qua img{
-	max-width: 50px;
+	max-width: 10%;
 }
 .qua1{
 	left: 95%;
@@ -94,6 +100,46 @@ body {
 	opacity: 0;
 	animation: move_qua 10s ease-in 9s infinite;
 }
+.btn_gift{
+	margin-top: 10%;
+	margin-left: 46%;
+	text-align: center;
+	position: absolute;
+}
+.btn_gift button{
+	background-color: #ce0000;
+	border: none;
+	color: white;
+	padding: 1.6rem 3.2rem;
+	text-align: center;
+	font-family: christmabetregular;
+	font-size: 1.6rem;
+	margin: 0.4rem 0.2rem;
+	opacity: 0.6;
+	transition: 0.3s;
+	border-radius: 5rem;
+	display: inline-block;
+	text-decoration: none;
+	cursor: pointer;
+	animation: display_btn 10s ease-in-out;
+}
+.btn_gift button:hover{
+	opacity: 1;
+}
+
+
+@keyframes display_btn{
+	0%{
+		opacity: 0;
+	}
+	90%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 1;
+	}
+}
+
 @keyframes move_qua{
 	0%{
 		opacity: 1;
@@ -220,3 +266,11 @@ body {
 		transform: translate3D(7.5%, 100%, 0);
 	}
 }
+
+@media only screen and (max-width: 1100px)
+{
+	.santa_l{
+		padding-top: 50%;
+	}
+}
+
