--- a/yummy/template/index.pug
+++ b/yummy/template/index.pug
@@ -75,50 +75,50 @@ section.section_2.gallery.container-fluid
       .grid-container
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img1.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img2.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img3.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img4.jpg' alt='Xem chi tiết')
       .grid-container
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img5.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img6.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img7.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Bít tết Wanju
           .location-image
             a(href='#')
               img(width='300' height='169' src='images/home_Page/img8.jpg' alt='Xem chi tiết')
