--- a/yummy/template/about.pug
+++ b/yummy/template/about.pug
@@ -8,6 +8,10 @@ head
   link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
   // fontAweSome
   link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous')
+  //slick
+  link(rel='stylesheet' type='text/css' href='js/slick/slick.css')
+  // Add the new slick-theme.css if you want the default styling
+  link(rel='stylesheet' type='text/css' href='js/slick/slick-theme.css')
   // icon
   link(rel='icon' href='images/favicon.ico')
   // Fonts
@@ -41,7 +45,6 @@ section.section_1.container-fluid
             .col-6
                 p.content_right Uisque volutpat pharetra felis, eu cursus lorem molestie vitae ulla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui ut cus libero augue at libero. Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
     .child-page-listing
-      h2 Our Locations
       .grid-container
         article#3685.location-listing
           a.location-title(href='#')
@@ -49,6 +52,18 @@ section.section_1.container-fluid
           .location-image
             a(href='#')
               img(width='300' height='169' src='./images/about_Page/chef1.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Xem chi tiết
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Xem chi tiết')
+        article#3685.location-listing
+          a.location-title(href='#')
+            | Xem chi tiết
+          .location-image
+            a(href='#')
+              img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Xem chi tiết')
         article#3685.location-listing
           a.location-title(href='#')
             | Xem chi tiết
@@ -134,7 +149,11 @@ include template-parts/footer.pug
 
 // Optional JavaScript
 // jQuery first, then Popper.js, then Bootstrap JS
-script(type='text/javascript' src='js/script.js')
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
 script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
+
+// slick
+script(type='text/javascript' src='js/slick/slick.min.js')
+script(type='text/javascript' src='./js/footer2.js')
+script(type='text/javascript' src='js/script.js')
