--- a/yummy/css/shop.css
+++ b/yummy/css/shop.css
@@ -63,7 +63,7 @@
 
 /* section 2 */
 .section_2 .card_main{
-    padding: 10rem;
+    padding: 5rem 10rem 5rem 10rem;
 }
 .card-deck{
     padding-bottom: 5rem;
@@ -83,4 +83,21 @@
     font-family: 'Poppins', sans-serif;
     font-size: 2.4rem;
     color: #FD5B00;
+}
+
+.top_section_2{
+    padding: 5rem 10rem 0 10rem;
+}
+.top_section_2 .dropdown button{
+    font-family: 'Prata', serif;
+    font-size: 1.8rem;
+    border: solid 1px #979797;
+}
+.top_section_2 .dropdown-item{
+    font-family: 'Prata', serif;
+    font-size: 1.8rem;
+}
+.search input{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
 }
